# crabapi

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build.yml
crates/crabapi/: Cargo.toml
crates/crabapi/examples/: multiple_requests.rs  one_request.rs
crates/crabapi/src/: lib.rs  main.rs
crates/crabapi/src/cli/: mod.rs
crates/crabapi/src/core/: mod.rs  requests.rs
crates/crabapi/src/core/app/: mod.rs
crates/crabapi/src/core/requests/: constants.rs  mod.rs  validators.rs
crates/crabapi/src/gui/: mod.rs
crates/crabapi/src/gui/iced/: default_styles.rs  file.rs  mod.rs
crates/crabapi/src/gui/iced/views/: body.rs  headers.rs  mod.rs  queries.rs  request.rs  response.rs
