[package]
name = "crabapi"
version.workspace = true
edition.workspace = true

[features]
default = ["iced"]
iced = ["dep:iced"]

[dependencies]
http = "1.2.0"
reqwest = "0.12.12"
tokio = { version = "1", features = ["full"] }

# gui options are optional
iced = { version = "0.13.1", optional = true }