[package]
name = "crabapi"
version.workspace = true
edition.workspace = true

[features]
default = ["iced"]
iced = ["dep:iced", "dep:iced_highlighter"]

[dependencies]
clap = "4.5.31"
const_format = "0.2.34"
http = "1.2.0"
reqwest = "0.12.12"
tokio = { version = "1", features = ["full"] }

# gui options are optional
iced = { version = "0.13.1", optional = true, features = ["advanced"] }
iced_highlighter = { version = "0.13.0", optional = true }

